--- a/src/index.css
+++ b/src/index.css
@@ -7,24 +7,33 @@ body {
 .container {
   margin: 0 auto;
   min-width: 327px;
+  max-width: 405px;
   width: 90%;
 }
 
-input {
+@media screen and (min-width: 768px) {
+  .container {
+    min-width: 540px;
+  }
+}
+
+input,
+p {
   margin: 0;
 }
 
 .App {
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-rows: 0.1fr;
   grid-template-columns: 1fr;
+  height: 100vh;
 }
 
 /***************
 LAYOUT
 ***************/
 
-header {
+.header {
   background: url(/src/images/bg-mobile-light.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -33,6 +42,22 @@ header {
   grid-row: 1/2;
   grid-column: 1/2;
   height: min-content;
+}
+
+.header-dark {
+  background: url(/src/images/bg-mobile-dark.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    background: url(/src/images/bg-desktop-light.jpg);
+  }
+
+  .header-dark {
+    background: url(/src/images/bg-desktop-dark.jpg);
+  }
 }
 
 .header-content {
@@ -47,8 +72,16 @@ header h1 {
   letter-spacing: 10px;
 }
 
-.sun-toggle-icon {
-  display: none;
+.theme-toggle-icon {
+  cursor: pointer;
+}
+
+.theme-toggle-icon path {
+  transition: all 0.4s;
+}
+
+.theme-toggle-icon:hover path {
+  fill: #25273d;
 }
 
 .todo-input {
@@ -64,6 +97,13 @@ header h1 {
   border-radius: 5px;
 }
 
+@media screen and (min-width: 768px) {
+  .todo-input {
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
+}
+
 .todo-checkbox {
   width: 20px;
   height: 20px;
@@ -72,17 +112,34 @@ header h1 {
   margin-left: 20px;
 }
 
-.todo-checkbox::check {
-  background: red;
+.todo-checkbox:hover {
+  cursor: pointer;
+}
+
+.checkbox-checked {
+  background-image: url("./images/check-solid.svg"),
+    linear-gradient(to left top, #c058f3, #55ddff);
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .todo-input-text {
   margin-left: 12px;
   font-size: 12px;
   border: none;
-  color: #9495a5;
+  color: #393a4b;
   font-family: "Josefin Sans", sans-serif;
   width: 90%;
+}
+
+.todo-input-text::placeholder {
+  color: #9495a5;
+}
+
+@media screen and (min-width: 768px) {
+  .todo-input-text {
+    font-size: 18px;
+  }
 }
 
 .todo-input-text:focus {
@@ -91,11 +148,14 @@ header h1 {
 
 .todo-item {
   border-bottom: 1px solid #e3e4f1;
-
   display: flex;
   align-items: center;
   z-index: 10000;
   height: min-content;
+  justify-content: flex-start;
+}
+
+.todo-item:first-child {
   border-radius: 5px 5px 0 0;
 }
 
@@ -115,20 +175,35 @@ header h1 {
   padding-bottom: 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .todo-text {
+    font-size: 18px;
+    margin-right: 2.3em;
+  }
+}
+
+.item-checked {
+  text-decoration: line-through;
+  color: #d1d2da;
+}
+
 .todo-list {
   background: #ffffff;
   grid-row: 1/2;
   grid-column: 1/2;
-  margin-top: 172px;
+  margin-top: 12em;
   border-radius: 5px;
   box-shadow: 10px 5px 50px -15px #c2c3d6, -10px -5px 50px -15px #c2c3d6;
+  height: min-content;
 }
 
 .todo-list-footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-left: 20px;
   padding-right: 15px;
+  padding: 16px 15px 16px 15px;
 }
 
 .todo-items-count {
@@ -150,17 +225,26 @@ header h1 {
   cursor: pointer;
 }
 
-.clear-completed-btn:focus {
+.clear-completed-btn:active {
   color: #494c6b;
 }
 
 .todo-filter {
-  margin-top: 16px;
+  margin-top: 1em;
   border-radius: 5px;
   text-align: center;
   padding-top: 15px;
   padding-bottom: 19px;
   box-shadow: 10px 5px 50px -15px #c2c3d6, -10px -5px 50px -15px #c2c3d6;
+  height: min-content;
+}
+
+@media screen and (min-width: 768px) {
+  .todo-filter {
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+  }
 }
 
 .filter-btn {
@@ -171,6 +255,10 @@ header h1 {
   font-size: 14px;
   color: #9495a5;
   font-family: "Josefin Sans", sans-serif;
+}
+
+.filter-btn-dark {
+  color: #5b5e7e;
 }
 
 .filter-btn:hover {
